Gnome 46: Fix invisible notifications in notification list

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -984,7 +984,6 @@ StScrollBar {
   background: transparent; }
 
 .message {
-  border: none;
   border-radius: 7px;
   background: #323946;
   box-shadow: none; }
